atualizando projeto redes sociais

--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,3 +38,11 @@ section#telefone {
     background: url('../imagens/frame-iphone\ 2.png') no-repeat;
 }
 
+iframe#tela {
+    position: relative;
+    top: 145px;
+    left: 59.5px;
+    width: 193px;
+    height: 340px;
+}
+
