--- a/estilos/style.css
+++ b/estilos/style.css
@@ -38,6 +38,26 @@ section#telefone {
     background: url('../imagens/frame-iphone\ 2.png') no-repeat;
 }
 
+section#rede-social {
+    text-align: right;
+}
+
+section#rede-social img {
+    width: 50px;
+    border-radius: 50%;
+    margin: 10px;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.575);
+    
+}
+
+section#rede-social img:hover {
+    border: 2px solid rgb(194, 191, 191);
+    transition: .1s;
+    
+}
+
+
+
 iframe#tela {
     position: relative;
     top: 145px;
